[tool.poetry]
name = "bf_duster"
version = "0.1.0"
description = "Transform all crypto dust into selected currency"
authors = ["Liviu Marius Manea <mlmarius@gmail.com>"]
license = "MIT"
readme = "README.md"
packages = [{include = "bf_duster", from="src"}]

[tool.poetry.dependencies]
python = "^3.11"
pydantic = {extras = ["dotenv"], version = "^1.10.7"}
requests = "^2.28.2"

[tool.poetry.group.dev.dependencies]
pytest = "^7.2.2"

[tool.poetry.scripts]
bf-duster = "bf_duster.__main__:main"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
